...
    var discoverySession: AVCaptureDevice.DiscoverySession?

    private lazy var features: [Feature] = [
        Feature(title: "UC Login", icon: "sign-in", tileColor: .momentumBlue50, action: { [weak self] in
            self?.setPreferencesForUCLogin()
        }),
        Feature(title: "Initiate Call", icon: "outgoing-call", tileColor: .momentumGreen50, action: { [weak self] in
            self?.navigationController?.pushViewController(InitiateCallViewController(), animated: true)
        }),
        Feature(title: "Waiting Call", icon: "incoming-call", tileColor: .momentumYellow50, action: { [weak self] in
            self?.navigationController?.pushViewController(ScheduledMeetingViewController(), animated: true)
        }),
        Feature(title: "Messaging", icon: "bubble-left", tileColor: .momentumMint50, action: { [weak self] in
...
        Feature(title: "Send Feedback", icon: "feedback", tileColor: .momentumOrange50, action: { [weak self] in
            self?.manageFeedback()
        }),
        Feature(title: "Extras", icon: "webhook", tileColor: .momentumGold50, action: { [weak self] in
            self?.navigationController?.pushViewController(ExtrasViewController(), animated: true)
        }),
        Feature(title: "Logout", icon: "sign-out", tileColor: .momentumRed50, action: logout)
    ]

    func logout() {
        webex.authenticator?.deauthorize {
            self.cleanupOnLogout()
        }
...
    override func viewDidLoad() {
        super.viewDidLoad()
        let capability = webex.people.getProductCapability()
        print("Product Capability: \(capability.isMeetingSupported)")
        view.backgroundColor = .backgroundColor
        setupExternalCameraConnectionNotifications()
        title = "Kitchen Sink"
        navigationController?.navigationBar.prefersLargeTitles = true
        let bundleVersion = Bundle.main.infoDictionary!["CFBundleVersion"] as! String
        versionLabel.text = "v\(Webex.version) (\(bundleVersion))"
        setupViews()
        setupConstraints()
        print("Testing Base64 encoding")
...
        }
        alert.addTextField { textField in
            textField.placeholder = "Enter password"
            passwordTF = textField
        }
        alert.addAction(UIAlertAction(title: "Cancel", style: UIAlertAction.Style.cancel, handler: nil))
        alert.addAction(UIAlertAction(title: "Login", style: UIAlertAction.Style.default, handler: { _ in
            
            let username = usernameTF?.text ?? ""
            let password = passwordTF?.text ?? ""
            if username.isEmpty || password.isEmpty {
                alert.title = "Invalid credentials. Try again"
                return
...
